--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,10 @@
   text-align: center;
 }
 
+.background {
+  background-image: url(../src/background.svg);
+}
+
 .App-logo {
   height: 40vmin;
   pointer-events: none;
