--- a/src/Detail.scss
+++ b/src/Detail.scss
@@ -81,3 +81,11 @@ div.container {
     margin-bottom: 0;
   }
 }
+
+.wow-enter {
+  opacity: 0;
+}
+.wow-enter-active {
+  opacity: 1;
+  transition: all 500ms;
+}
